--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="hourly">Hourly</string>
     <string name="daily">Daily</string>
     <string name="alert">Alert</string>
+    <string name="london_center">London/center</string>
+    <string name="at_7_30_pm">At 7:30 pm</string>
+    <string name="_25">25</string>
+    <string name="sunny_clear_weather">Sunny clear weather</string>
 </resources>
