add style to the current fragment 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="at_7_30_pm">At 7:30 pm</string>
     <string name="_25">25</string>
     <string name="sunny_clear_weather">Sunny clear weather</string>
+    <string name="o">o</string>
+    <string name="lastUpdated">Last updated</string>
 </resources>
