style current screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="london_center">London/center</string>
     <string name="at_7_30_pm">At 7:30 pm</string>
     <string name="_25">25</string>
-    <string name="sunny_clear_weather">Sunny clear weather</string>
+    <string name="clear_weather">clear weather</string>
     <string name="o">o</string>
     <string name="lastUpdated">Last updated</string>
 </resources>
