hook up the viewpager in the main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">myWeather</string>
+    <string name="weather_forecast">Weather forecast</string>
     <string name="current">Current</string>
-    <string name="current_forecast">Current forecast</string>
     <string name="hourly">Hourly</string>
     <string name="daily">Daily</string>
     <string name="alert">Alert</string>
